--- a/game-image/pyproject.toml
+++ b/game-image/pyproject.toml
@@ -15,6 +15,7 @@ numpy = "^1.26.4"
 authlib = "^1.3.0"
 gitpython = "^3.1.42"
 gevent = "^24.2.1"
+connect-four-lib = "^1.1.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.12.1"
