--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,7 +42,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/tira-app:latest
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/game-image:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
           build-args: |
