--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
         "react-bootstrap": "^2.10.2",
         "react-dom": "^18.2.0",
         "react-redux": "^9.1.0",
+        "react-router-dom": "^6.22.3",
         "recharts": "^2.12.3",
         "sass": "^1.72.0",
         "socket.io-client": "^4.7.5",
