--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
         "react": "^18.2.0",
         "react-bootstrap": "^2.10.2",
         "react-dom": "^18.2.0",
+        "react-markdown": "^9.0.1",
         "react-redux": "^9.1.0",
         "react-router-dom": "^6.22.3",
         "recharts": "^2.12.3",
