--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -22,6 +22,7 @@ gevent = "^24.2.1"
 pyuwsgi = "^2.0.23.post0"
 connect-four-lib = "^1.1.0"
 paramiko = "^3.4.0"
+duo-game-lib = "^0.1.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.12.1"
