--- a/HPC/pyproject.toml
+++ b/HPC/pyproject.toml
@@ -13,6 +13,7 @@ python-chess = "^1.999"
 gitpython = "^3.1.42"
 connect-four-lib = "^1.3.0"
 duo-game-lib = "^0.1.0"
+invoke = "^2.2.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.12.1"
