--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,17 +1,4 @@
 {
-    "python.testing.cwd": "${workspaceFolder}/backend/src",
     "python.testing.unittestEnabled": false,
-    "python.testing.pytestEnabled": true,
-    "pylint.cwd": "${fileDirname}",
-    "pylint.args": [
-        "--rcfile=../.pylintrc",
-        "-j=0"
-    ],
-    "python.testing.pytestArgs": [
-        "-n=auto"
-    ],
-    "python.analysis.extraPaths": [
-        "backend/src",
-        "game-image/src"
-    ]
+    "python.testing.pytestEnabled": false
 }
