--- a/game-image/pyproject.toml
+++ b/game-image/pyproject.toml
@@ -14,6 +14,7 @@ gitpython = "^3.1.42"
 connect-four-lib = "^1.3.0"
 duo-game-lib = "^0.1.0"
 invoke = "^2.2.0"
+urllib3 = "^2.2.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.12.1"
