--- a/game-image/pyproject.toml
+++ b/game-image/pyproject.toml
@@ -15,6 +15,7 @@ connect-four-lib = "^1.3.0"
 duo-game-lib = "^0.1.0"
 invoke = "^2.2.0"
 urllib3 = "^2.2.1"
+filelock = "^3.13.4"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.12.1"
