feat(#137): Install Stockfish when building Docker image
Co-authored-by: mleikas@helsinki.fi <max.o.leikas@helsinki.fi>
Co-authored-by: Joel Weinitschke <joel.weinitschke@gmail.com>

--- a/game-image/Dockerfile
+++ b/game-image/Dockerfile
@@ -31,6 +31,7 @@ COPY --from=backend ${VIRTUAL_ENV} ${VIRTUAL_ENV}
 
 WORKDIR /app
 
+RUN poetry run invoke install
 
 COPY ./ .
 RUN adduser --home /home/user user
