chore: Update .env
Co-authored-by: MiikaMatias <miikapiiparinen24@gmail.com>

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,2 @@
 TEMP_DIRNAME=temp
-DEFAULT_CHESS_AI_FILENAME=ai.py
-CHESS_TIMEOUT=5
-HPC_GAME_IMAGE_PATH=docker://kontrakti/game-image:latest
+DEFAULT_GAME_TIMEOUT=5
