--- a/backend/wsgi.ini
+++ b/backend/wsgi.ini
@@ -1,11 +1,11 @@
 [uwsgi]
 chdir = src
 module = app:app
-http = :5000
-https = :5001,dev.cert,dev.key
-
+http = :80
+https = :443,dev.cert,dev.key
 master = true
 http-websockets = true
 gevent = 1000
 die-on-term = true
 
+daemonize = log.txt
