--- a/backend/.vscode/settings.json
+++ b/backend/.vscode/settings.json
@@ -3,6 +3,10 @@
     "python.testing.unittestEnabled": false,
     "python.testing.pytestEnabled": true,
     "pylint.cwd": "${workspaceFolder}",
-    "pylint.args": ["--rcfile=${workspaceFolder}/.pylintrc", "-j=0"],
-    "python.testing.pytestArgs": ["-n=auto"],
+    "pylint.args": [
+        "--rcfile=${workspaceFolder}/.pylintrc",
+        "-j=0",
+        "--disable=E0401"
+    ],
+    "python.testing.pytestArgs": ["-n=auto"]
 }
