ci(#144): Upload e2e test screenshots on failure

--- a/.github/workflows/e2e_test.yml
+++ b/.github/workflows/e2e_test.yml
@@ -51,3 +51,10 @@ jobs:
           wait-on-timeout: 10
           build: pnpm run build
           start: pnpm run server
+
+      - name: Upload screenshots
+        uses: actions/upload-artifact@v3
+        if: failure()
+        with:
+          name: cypress-screenshots
+          path: cypress/screenshots
